--- a/index.html
+++ b/index.html
@@ -156,27 +156,46 @@ $('#slider').nivoSlider();
 <br />
 <a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
 </p>
-<i>last update: 2012-08-05</i>
+<i>last update: 2013-04-26</i>
 </div>
 </div>
 </div>
 <!-- TECHNICAL SKILLS PAGE ENDS -->
+
+<!-- PAGE 1 STARTS -->
+<div class="panel">
+<div class="panel-wrapper">
+<h2 class="title">Panel 2</h2>
+<div class="skills_left_text">
+<h4>Entrepreneur <small style="float: right;">February 2013 - Present</small></h4>
+<p>Implementation of a software as a service for the SEO market</p>
+<h5>Technologies</h5>
+<p>NodeJS, ExpressJS, MongoDB, Amazon Web Service (EC2), lesscss, git, gnu make</p>
+</div>
+<div class="skills_right_text">
+<h4>Main Achievements</h4>
+<img src="images/bullet.png" alt=""  width="12" height="9" /> Implementing the API of an internet service using: Amazon EC2, Node.JS/Express and MongoDB.<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> The code is built with extensive unit-tests (based on QUnit), and a thorough API manual and documentation.<br />
+</div>
+</div>
+</div>
+<!-- PAGE 1 ENDS -->
 
 <!-- PAGE 2 STARTS -->
 <div class="panel">
 <div class="panel-wrapper">
 <h2 class="title">Panel 2</h2>
 <div class="skills_left_text">
-<h4>Razoss <small style="float: right;">June 2010 - Current</small></h4>
-<p>Designed the architecture and implemented a user friendly extensible toolbars generator (like Wibiya/Conduit)</p>
+<h4>Razoss <small style="float: right;">June 2010 - November 2012</small></h4>
+<p>Designed the architecture and implemented a user friendly extensible toolbars generator (like Wibiya/Conduit) in Goggle App Engine's cloud</p>
 <h5>Technologies</h5>
-<p>python django facebook jquery google-app-engine browsers-plugins web-widgets git node.js lesscss</p>
+<p>Python, Django, Facebook API, jQuery, google-app-engine, browsers-plugins, web-widgets, git, NodeJS, lesscss</p>
 </div>
 <div class="skills_right_text">
 <h4>Main Achievements</h4>
 <img src="images/bullet.png" alt=""  width="12" height="9" /> Developing a low-cost scalable analytics system.<br />
 <img src="images/bullet.png" alt=""  width="12" height="9" /> Developing a secured users authentication system which isn't based on ssl (more details in my official CV).<br />
-<img src="images/bullet.png" alt=""  width="12" height="9" /> The servers-side code designed to handle simple AJAX APIs, leaving to the client as much as possible<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" /> The servers-side code designed to handle simple AJAX APIs and return JSONs. It helped to save cpu time (the browsers took care of the computational work that relates to templating), save bandwidth and extend the parts that can be handled by CDNs.<br />
 <img src="images/bullet.png" alt=""  width="12" height="9" /> Extensible toolbars generator<br />
 <img src="images/bullet.png" alt=""  width="12" height="9" /> Widgets development (jQuery, jQueryUI)<br />
 </div>
@@ -192,7 +211,7 @@ $('#slider').nivoSlider();
 <h4>WhiteWeb <small style="float: right;">March 2009 - June 2010</small></h4>
 <p>Implementing and maintaining Babylon's translation/dictionary sites</p>
 <h5>Technologies</h5>
-<p>php python redis apache mysql bash gettext ajax jquery vim</p>
+<p>php, python, redis, apache, mysql, bash, gettext, ajax, jquery, vim</p>
 </div>
 <div class="skills_right_text">
 <h4>Main Achievements</h4>
@@ -212,7 +231,7 @@ $('#slider').nivoSlider();
 <h4>Convertonet <small style="float: right;">April 2008 - February 2009</small></h4>
 <p>Coding for the SEO Department</p>
 <h5>Technologies</h5>
-<p>php python redis apache mysql bash gettext ajax jquery vim</p>
+<p>php, python, redis, apache, mysql, bash, gettext, ajax, jquery, vim</p>
 </div>
 <div class="skills_right_text">
 <h4>Main Achievements</h4>
@@ -244,7 +263,7 @@ $('#slider').nivoSlider();
 <br/>
 <img src="images/skype.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact">daniel.razoss</span>
 <br/>
-<img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="http://www.theosp.me/" class="link" title="My Website">theosp.me</a></span>
+<img src="images/home.png" class="contact_icon" width="30" height="30" alt="home" /> <span class="contact"><a href="http://theosp.github.io/" class="link" title="My Website">theosp.github.io</a></span>
 <br/>
 <!--<img src="images/vcard.png" class="contact_icon" width="30" height="30" alt="vcard" /> <span class="contact"><a href="/vcard/daniel-chcouri.vcf" class="link" title="Add Me To Your Contacts">vCard</a></span>-->
 </div>
