--- a/index.html
+++ b/index.html
@@ -106,8 +106,15 @@ $('#slider').nivoSlider();
 </div>
 </div>
 <div class="content-right">
-<h4>My current project</h4>
-<p>I currently work as the head developer in a self-funded startup in its early stages. The startup aims to develop a new software as a service solution for the SEO market. I mainly develop the guts of the system's on Amazon EC2 using: node.js, express, mongoDB and some more technologies.</p>
+<h4>What am I doing now?</h4>
+<p>
+These days I'm very enthusiastic about <a href="http://www.meteor.com/">Meteor</a> and <a href="http://nodejs.org/">Node.js</a> in general. In August
+Penguin 2013 conference I demonstrate a <a href="http://socket.io/">socket.io</a> based Pong game I developed in
+which the audience smart phones were used as remote controllers for a game arena
+that was displayed in a main screen.<br />
+I'm also working with a friend on a Meteor based online game.
+
+</p>
 </div>
 </div>
 </div>
@@ -155,7 +162,7 @@ $('#slider').nivoSlider();
 <br />
 <a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
 </p>
-<i>last update: 2013-04-26</i>
+<i>last update: 2013-10-09</i>
 </div>
 </div>
 </div>
