--- a/index.html
+++ b/index.html
@@ -108,12 +108,9 @@ $('#slider').nivoSlider();
 <div class="content-right">
 <h4>What am I doing now?</h4>
 <p>
-These days I'm very enthusiastic about <a href="http://www.meteor.com/">Meteor</a> and <a href="http://nodejs.org/">Node.js</a> in general. In August
-Penguin 2013 conference I demonstrate a <a href="http://socket.io/">socket.io</a> based Pong game I developed in
-which the audience smart phones were used as remote controllers for a game arena
-that was displayed in a main screen.<br />
-I'm also working with a friend on a Meteor based online game.
-
+I am about to give a talk in the <a href="http://opensource.hk/en/2014">Hong Kong Open Source Conference 2014</a> about a <a href="http://socket.io/">socket.io</a> based Pong game I developed in which the audience smart phones were used as remote controllers for a game arena that was displayed in a main screen.<br />
+I'm very enthusiastic about <a href="http://www.meteor.com/">Meteor</a> and <a href="http://nodejs.org/">Node.js</a> in general.<br />
+Looking for the next opportunity...
 </p>
 </div>
 </div>
@@ -162,7 +159,7 @@ I'm also working with a friend on a Meteor based online game.
 <br />
 <a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
 </p>
-<i>last update: 2013-10-09</i>
+<i>last update: 2013-03-27</i>
 </div>
 </div>
 </div>
@@ -173,15 +170,17 @@ I'm also working with a friend on a Meteor based online game.
 <div class="panel-wrapper">
 <h2 class="title">Panel 2</h2>
 <div class="skills_left_text">
-<h4>Entrepreneur <small style="float: right;">February 2013 - Present</small></h4>
-<p>Implementation of a software as a service for the SEO market</p>
+<h4>Comigo <small style="float: right;">June 2013 - March 2014</small></h4>
+<p>Designing and implementing the Comigo's js-sdk that provides 3rd parties a web-developers friendly interaction with the Comigo's set-top box</p>
 <h5>Technologies</h5>
-<p>NodeJS, ExpressJS, MongoDB, Amazon Web Service (EC2), lesscss, git, gnu make</p>
+<p>Javascript, qunit, node.js, Ruby on Rails, apns</p>
 </div>
 <div class="skills_right_text">
 <h4>Main Achievements</h4>
-<img src="images/bullet.png" alt=""  width="12" height="9" /> Implementing the API of an internet service using: Amazon EC2, Node.JS/Express and MongoDB.<br />
-<img src="images/bullet.png" alt=""  width="12" height="9" /> The code is built with extensive unit-tests (based on QUnit), and a thorough API manual and documentation.<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" />Designing and implementing the Comigo's js-sdk that provides 3rd parties a web-developers friendly interaction with the Comigo's set-top box<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" />Developing an Apple Push Notification Service provider server with ruby + redis<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" />Developing a single page application for the production and presentation of statistical data<br />
+<img src="images/bullet.png" alt=""  width="12" height="9" />Developing integration with the the Odnoklassniki API's (See school_friend in the Contributions section below)<br />
 </div>
 </div>
 </div>
