--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ $('#slider').nivoSlider();
 <div class="content-right">
 <h4>What am I doing now?</h4>
 <p>
-I am about to give a talk in the <a href="http://opensource.hk/en/2014">Hong Kong Open Source Conference 2014</a> about a <a href="http://socket.io/">socket.io</a> based Pong game I developed in which the audience smart phones were used as remote controllers for a game arena that was displayed in a main screen.<br />
+I am about to give a talk in the <a href="http://opensource.hk/en/2014">Hong Kong Open Source Conference 2014</a> about a <a href="http://socket.io/">socket.io</a> based Pong game I developed in which the audience smart phones are used as remote controllers for a game arena that displayed in a main screen.<br />
 I'm very enthusiastic about <a href="http://www.meteor.com/">Meteor</a> and <a href="http://nodejs.org/">Node.js</a> in general.<br />
 Looking for the next opportunity...
 </p>
