--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>Daniel Chcouri</title>
+<title>Daniel Chcouri - Full Stack Web Developer &amp; Web APIs Developer Expert</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /*<![CDATA[*/
@@ -76,7 +76,7 @@ loading_text: "loading tweets..."
 <body>
 <div class="container">
 <h1>Daniel Chcouri</h1>
-<div class="title">Web Developer</div>
+<div class="title">Full Stack Web Developer &amp; Web APIs Developer Expert</div>
 <div style="height: 500px; width: 980px;" class="shadow">
 <div id="one" class="accordion">
 <ol>
@@ -86,32 +86,33 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Hi, I'm Daniel. Computer programming is my core competency, my work and my main interest. In my work I strive to keep the delicate balance between stability and agility. I'm always eager to expand my horizons with new challenges and technologies.</div>
-<div class="content-left">
-<!-- SLIDER GALLERY - ADD YOUR PHOTOS HERE -->
-<div id="sliderbg">
-<div id="slider-wrapper">
-<div id="slider" class="nivoSlider">
-<img src="images/august-penguin.png" alt="" width="315" height="224" />
+<div class="intro">Hi, I'm Daniel. I am a unix full stack web developer for a better part of decade now. My main interest and passion these days are in the area of web APIs development, both for companies to make their data accessible for 3rd party developers, and as libraries for the open source community. I see the world of APIs design and implementation as the ultimate manifestation of the knowledge, capabilities and opinions that I've shaped and acquired over my career so far. I am also highly enthusiastic about the Meteor web platform and I see it as a revolution in the web development world.</div>
+<div class="skills_left_text">
+    <span class="skill">My CV and professional profiles</span>
+    <div class="clear2"></div>
+    <p style="margin-bottom: 5px; margin-left: 9px;"><a href="/cv/daniel-chcouri.doc"><img style="margin-right: 3px;" src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
+    <br/>
+    <a href="/cv/daniel-chcouri.pdf"><img style="margin-right: 3px;" src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
+    <br />
+    <a href="/cv/daniel-chcouri.odt"><img style="margin-right: 3px;" src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
+    <br />
+    <a href="http://www.linkedin.com/in/danielchcouri" target="_blank"><img style="margin-right: 3px;" src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a>
+    <br />
+    <a href="http://careers.stackoverflow.com/1" target="_blank"><img style="margin-right: 3px;" src="images/careers.png" alt="Careers Stackoverflow" width="12" height="12" /> Stackoverflow Careers 2.0</a>
+    <br />
+    <a href="http://stackoverflow.com/users/299920/theosp" target="_blank"><img style="margin-right: 3px;" src="images/stack.png" alt="Stackoveflow Profile" width="12" height="12" /> Stackoveflow Profile</a>
+    <br />
+    <a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
+    </p>
 </div>
-</div>
-<script type="text/javascript" src="nivo/jquery.nivo.slider.js"></script>
-<script type="text/javascript">
-//<![CDATA[
-$(window).load(function() {
-$('#slider').nivoSlider();
- });
-//]]>
-</script>
-</div>
-</div>
-<div class="content-right">
-<h4>What am I doing now?</h4>
-<p>
-I am about to give a talk in the <a href="http://opensource.hk/en/2014">Hong Kong Open Source Conference 2014</a> about a <a href="http://socket.io/">socket.io</a> based Pong game I developed in which the audience smart phones are used as remote controllers for a game arena that displayed in a main screen.<br />
-I'm very enthusiastic about <a href="http://www.meteor.com/">Meteor</a> and <a href="http://nodejs.org/">Node.js</a> in general.<br />
-Looking for the next opportunity...
-</p>
+<div class="skills_right_text">
+    <span class="skill">Upcoming/Recent talks</span>
+    <div class="clear2"></div>
+    <p style="margin-bottom: 5px; margin-left: 9px;">
+    Singapore: Meteor Singapore Community Meetup - June 2014: <b><i>Developing Meteor's Internationalization Build Plugin</i></b><br /><br />
+
+Hong Kong: Hong-Kong Open Source Conference (HKOSC) 2014:
+<b><i>Developing Multiplayer Pong Game with Node.JS + express + socket.io</i></b><br /><br />
 </div>
 </div>
 </div>
@@ -119,50 +120,13 @@ Looking for the next opportunity...
 <!-- ABOUT PAGE ENDS -->
 <!-- RESUME PAGE STARTS -->
 <li>
-<h2><span>Resume/CV</span></h2>
+<h2><span>Online Resume</span></h2>
 <div>
 <div class="figure">
-<h3>My Resume</h3>
-<div class="intro" style="margin-bottom: 13px;">Started in 2008, my professional career covers various fields: Advanced Web Applications, Cloud Services (Amazon/Google), Social APIs (Facebook, Twitter), Widgets development, Web sites development, LAMP servers installations and configurations (both VPSs and locale), and more...
-    </div>
-<!-- TECHNICAL SKILLS PAGE STARTS -->
+<h3>Online Resume</h3>
 <div class="coda-slider-wrapper">
 <div class="coda-slider preload" id="coda-slider-1">
-<div class="panel">
-<div class="panel-wrapper">
-<h2 class="title">skills</h2>
-<div class="skills_left_text">
-<h4>Technical Skills</h4>
-<p>The Vim editor and the Unix command line are <a title="See a lecture I gave about my working environment in an annual Linux convention at Israel">the main tools I work with</a>. I have extensive experience in all aspects of web-development (both server-side and client), high commitment to standards, and code history transparency (with git).</p>
-<p><img src="images/bullet.png" alt="" width="12" height="9" /> Server side: Javascript (nodeJS), Python
-<br/>
-<img src="images/bullet.png" alt="" width="12" height="9" /> Client side: HTML5, CSS3, Javascript (jQuery)
-<br />
-<img src="images/bullet.png" alt="" width="12" height="9" /> Development Tools: Git, VIM, Bash, Gimp</p>
-</div>
-
-<div class="skills_right_text">
-<span class="skill">My CV and professional profiles</span>
-<div class="clear2"></div>
-<p style="margin-bottom: 5px;">You can also browse my working experience online using the arrows to the left and right</p>
-<p style="margin-bottom: 5px; margin-left: 9px;"><a href="/cv/daniel-chcouri.doc"><img style="margin-right: 3px;" src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
-<br/>
-<a href="/cv/daniel-chcouri.pdf"><img style="margin-right: 3px;" src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
-<br />
-<a href="/cv/daniel-chcouri.odt"><img style="margin-right: 3px;" src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
-<br />
-<a href="http://www.linkedin.com/in/danielchcouri" target="_blank"><img style="margin-right: 3px;" src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a>
-<br />
-<a href="http://careers.stackoverflow.com/1" target="_blank"><img style="margin-right: 3px;" src="images/careers.png" alt="Careers Stackoverflow" width="12" height="12" /> Stackoverflow Careers 2.0</a>
-<br />
-<a href="http://stackoverflow.com/users/299920/theosp" target="_blank"><img style="margin-right: 3px;" src="images/stack.png" alt="Stackoveflow Profile" width="12" height="12" /> Stackoveflow Profile</a>
-<br />
-<a href="https://github.com/theosp" target="_blank"><img style="margin-right: 3px;" src="images/github_icon.png" alt="Github" width="12" height="12" /> GitHub Profile</a>
-</p>
-<i>last update: 2013-03-27</i>
-</div>
-</div>
-</div>
+<!-- TECHNICAL SKILLS PAGE STARTS -->
 <!-- TECHNICAL SKILLS PAGE ENDS -->
 
 <!-- PAGE 1 STARTS -->
@@ -262,7 +226,11 @@ Looking for the next opportunity...
 <div class="intro">You are welcome to contact me</div>
 <div class="content-left">
 <!-- CONTACT ICONS -->
-<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">972-54-8836191</span>
+<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">Hong Kong: 852-91897356</span>
+<br/>
+<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">Israel Primary: 972-3-7221670</span>
+<br/>
+<img src="images/telephone.png" class="contact_icon" width="30" height="30" alt="telephone" /> <span class="contact">Israel: 972-54-8836191</span>
 <br/>
 <img src="images/email.png" class="contact_icon" width="30" height="30" alt="email" /> <span class="contact"><a href="mailto:333222@gmail.com" class="link" title="Email Me">333222@gmail.com</a></span>
 <br/>
