--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-<title>Daniel Chcouri - Full Stack Web Developer &amp; Web APIs Developer Expert</title>
+<title>Daniel Chcouri - Full Stack Web Developer &amp; Web API Development Expert</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <style type="text/css">
 /*<![CDATA[*/
@@ -76,7 +76,7 @@ loading_text: "loading tweets..."
 <body>
 <div class="container">
 <h1>Daniel Chcouri</h1>
-<div class="title">Full Stack Web Developer &amp; Web APIs Developer Expert</div>
+<div class="title">Full Stack Web Developer &amp; Web API Development Expert</div>
 <div style="height: 500px; width: 980px;" class="shadow">
 <div id="one" class="accordion">
 <ol>
@@ -86,7 +86,7 @@ loading_text: "loading tweets..."
 <div>
 <div class="figure">
 <h3>Welcome</h3>
-<div class="intro">Hi, I'm Daniel. I am a unix full stack web developer for a better part of decade now. My main interest and passion these days are in the area of web APIs development, both for companies to make their data accessible for 3rd party developers, and as libraries for the open source community. I see the world of APIs design and implementation as the ultimate manifestation of the knowledge, capabilities and opinions that I've shaped and acquired over my career so far. I am also highly enthusiastic about the Meteor web platform and I see it as a revolution in the web development world.</div>
+<div class="intro">Hi, I'm Daniel. I have been a UNIX full stack web developer for the better part of a decade now. My main interest these days is in web API development, both for the open source community and for companies to make their data easily accessible to third-party developers. I consider API design and implementation the best manifestation of the knowledge, capabilities and opinions that I've acquired in my career thus far. When it comes to full stack web development the Meteor framework is my current preferred choice.</div>
 <div class="skills_left_text">
     <span class="skill">My CV and professional profiles</span>
     <div class="clear2"></div>
@@ -97,8 +97,6 @@ loading_text: "loading tweets..."
     <a href="/cv/daniel-chcouri.odt"><img style="margin-right: 3px;" src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
     <br />
     <a href="http://www.linkedin.com/in/danielchcouri" target="_blank"><img style="margin-right: 3px;" src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a>
-    <br />
-    <a href="http://careers.stackoverflow.com/1" target="_blank"><img style="margin-right: 3px;" src="images/careers.png" alt="Careers Stackoverflow" width="12" height="12" /> Stackoverflow Careers 2.0</a>
     <br />
     <a href="http://stackoverflow.com/users/299920/theosp" target="_blank"><img style="margin-right: 3px;" src="images/stack.png" alt="Stackoveflow Profile" width="12" height="12" /> Stackoveflow Profile</a>
     <br />
