--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@ loading_text: "loading tweets..."
 <div class="skills_left_text">
     <span class="skill">My CV and professional profiles</span>
     <div class="clear2"></div>
+    <p style="margin-bottom: 5px; margin-left: 9px;">
     <a href="/cv/daniel-chcouri.pdf"><img style="margin-right: 3px;" src="images/pdf.png" alt="pdf" width="12" height="9" /> PDF (Acrobat Reader)</a>
     <br />
     <a href="/cv/daniel-chcouri.odt"><img style="margin-right: 3px;" src="images/odt.png" alt="odt" width="12" height="9" /> ODT (Open Office)</a>
     <br />
-    <p style="margin-bottom: 5px; margin-left: 9px;"><a href="/cv/daniel-chcouri.doc"><img style="margin-right: 3px;" src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
+    <a href="/cv/daniel-chcouri.doc"><img style="margin-right: 3px;" src="images/doc.png" alt="doc" width="12" height="9" /> DOC (MS Office)</a>
     <br/>
     <a href="http://www.linkedin.com/in/danielchcouri" target="_blank"><img style="margin-right: 3px;" src="images/linkedin.png" alt="linkedin" width="12" height="12" /> My Linkedin Profile</a>
     <br />
