--- a/index.html
+++ b/index.html
@@ -59,10 +59,19 @@ loading_text: "loading tweets..."
 });
 </script> 
 
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-28197225-1', 'theosp.github.io');
+ga('require', 'displayfeatures');
+ga('send', 'pageview');
+</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-28197225-1']);
+  _gaq.push(['_setAccount', '']);
   _gaq.push(['_trackPageview']);
 
   (function() {
