--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@ ga('send', 'pageview');
     <span class="skill">Upcoming/Recent talks</span>
     <div class="clear2"></div>
     <p style="margin-bottom: 5px; margin-left: 9px;">
-    Singapore: Meteor Singapore Community Meetup - June 2014: <b><i>Developing Meteor's Internationalization Build Plugin</i></b><br /><br />
-
-Hong Kong: Hong-Kong Open Source Conference (HKOSC) 2014:
-<b><i>Developing Multiplayer Pong Game with Node.JS + express + socket.io</i></b><br /><br />
+    Taiwan: Meteor Taipei Meetup - Sep. 18th, 2014: <b><i>Intro to Meteor</i></b><br />
+    Singapore: Meteor Singapore Community Meetup - June 2014:
+    <b><i>Developing Meteor's Internationalization Build Plugin</i></b><br />
+    Hong Kong: Hong-Kong Open Source Conference (HKOSC) 2014:
+    <b><i>Developing Multiplayer Pong Game with Node.JS + express + socket.io</i></b><br />
 </div>
 </div>
 </div>
